sdks/novus-mundus-ts/tests/results/09-hero-lock-debug.txt
bun test v1.2.10 (db2e7d7f)

tests/e2e/09-hero.test.ts:

[1m[34m━━━ Hero System ━━━[0m
[validator] Verifying program binaries...
[validator] All binaries found.
[validator] Killing any existing validator...
[validator] Cleared old ledger.
[validator] Starting solana-test-validator --reset ...
[validator] Programs: Novus Mundus, MPL Core, TLD House, ALT Name Service
[validator] Waiting for RPC... (0.8s)
[validator] Ready in 1.6s.
[setup] Airdropping SOL...
[setup] Initializing GameEngine + ShopConfig...
[setup] Initializing cities, heroes, research, shop items (parallel)...
[setup] All infrastructure ready in 2.4s.
(skip) Hero System > Hero Minting > should mint a new hero
(skip) Hero System > Hero Minting > should reject minting without enough resources
(skip) Hero System > Hero Minting > should reject minting non-existent template
(skip) Hero System > Hero Minting > should mint multiple heroes from same template
(skip) Hero System > Hero Level Up > should level up hero with fragments
(skip) Hero System > Hero Level Up > should reject level up without enough fragments
(skip) Hero System > Hero Level Up > should reject level up at max level
(skip) Hero System > Hero Level Up > should increase stats on level up
[PlayerFactory] Initializing player 0 (city 0)
[2m[onchain][0m [2m4DdJrBac4L..[0m [36m⚡ UserCreated[0m [2muser=2GzaZXQS.. wallet=G9Qrv1ad.. timestamp=1770017878[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [36m⚡ PlayerJoinedKingdom[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. player=8368TZj8.. owner=G9Qrv1ad.. joinedAt=1770017878[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35minit user[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35minit player[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mInstruction: MintTo[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [35mcreate research progress[0m
[2m[onchain][0m [2m4DdJrBac4L..[0m [33mTotal 6,438 / 526,293 CU[0m
[2m[onchain][0m [2m5iaKmKFU7n..[0m [36m⚡ EstateCreated[0m [2mestate=2zEozDGn.. player=8368TZj8.. playerName=Player #1 timestamp=1770017879[0m
[2m[onchain][0m [2m5iaKmKFU7n..[0m [36m⚡ ItemPurchased[0m [2mplayer=8368TZj8.. playerName=Player #1 itemId=9999 quantity=10 price=10000 currency=0 timestamp=1770017879[0m
[2m[onchain][0m [2m5iaKmKFU7n..[0m [35mcreate estate[0m
[2m[onchain][0m [2m5iaKmKFU7n..[0m [35mpurchase item[0m
[2m[onchain][0m [2m5iaKmKFU7n..[0m [33mTotal 12,566 / 396,001 CU[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=0 plot=0 completesAt=1770032279 timestamp=1770017879[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=0 level=1 plot=0 timestamp=1770017879[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [35mcomplete building[0m
[2m[onchain][0m [2mxdNkZwvwiU..[0m [33mTotal 1,072 / 321,543 CU[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=9 plot=1 completesAt=1770061081 timestamp=1770017881[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [33mTotal 564 / 321,525 CU[0m
[2m[onchain][0m [2m2D8PFWhznV..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[buildAndCompleteBuilding] Building 9 needs split build...
[2m[onchain][0m [2m5mz5yNbQHB..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=9 plot=1 completesAt=1770061082 timestamp=1770017882[0m
[2m[onchain][0m [2m5mz5yNbQHB..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m5mz5yNbQHB..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m5mz5yNbQHB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5mz5yNbQHB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5mz5yNbQHB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5mz5yNbQHB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5mz5yNbQHB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5mz5yNbQHB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5mz5yNbQHB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5mz5yNbQHB..[0m [33mTotal 10,204 / 331,729 CU[0m
[2m[onchain][0m [2m54Dfd2N1xS..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=9 level=1 plot=1 timestamp=1770017882[0m
[2m[onchain][0m [2m54Dfd2N1xS..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m54Dfd2N1xS..[0m [35mcomplete building[0m
[2m[onchain][0m [2m54Dfd2N1xS..[0m [33mTotal 1,115 / 289,662 CU[0m
[2m[onchain][0m [2m3AJrTQnLUi..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m3AJrTQnLUi..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m3AJrTQnLUi..[0m [33mTotal 360 / 399,850 CU[0m
[2m[onchain][0m [2m3AJrTQnLUi..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1a[0m
[buildAndCompleteBuilding] Building 0 already exists, continuing
[2m[onchain][0m [2m2WPvBcJgqB..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=12 plot=2 completesAt=1770061093 timestamp=1770017893[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [33mTotal 591 / 321,488 CU[0m
[2m[onchain][0m [2m2WPvBcJgqB..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[buildAndCompleteBuilding] Building 12 needs split build...
[2m[onchain][0m [2m4cJdNg3D9g..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=12 plot=2 completesAt=1770061093 timestamp=1770017893[0m
[2m[onchain][0m [2m4cJdNg3D9g..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4cJdNg3D9g..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4cJdNg3D9g..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4cJdNg3D9g..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4cJdNg3D9g..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4cJdNg3D9g..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4cJdNg3D9g..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4cJdNg3D9g..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4cJdNg3D9g..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4cJdNg3D9g..[0m [33mTotal 10,209 / 331,697 CU[0m
[2m[onchain][0m [2m2ZDm8bGKhh..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=12 level=1 plot=2 timestamp=1770017894[0m
[2m[onchain][0m [2m2ZDm8bGKhh..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2ZDm8bGKhh..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2ZDm8bGKhh..[0m [33mTotal 1,179 / 289,657 CU[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=1 plot=3 completesAt=1770032296 timestamp=1770017896[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=1 level=1 plot=3 timestamp=1770017896[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [35mcomplete building[0m
[2m[onchain][0m [2mSmEcTWWqGa..[0m [33mTotal 1,234 / 321,439 CU[0m
[2m[onchain][0m [2m4jBcRrBCNz..[0m [36m⚡ TeamCreated[0m [2mteam=8d9iJRnJ.. teamName=HTeam898968 founder=8368TZj8.. noviBurned=50000 timestamp=1770017898[0m
[2m[onchain][0m [2m4jBcRrBCNz..[0m [35mcreate team[0m
[2m[onchain][0m [2m4jBcRrBCNz..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4jBcRrBCNz..[0m [33mTotal 36,208 / 200,000 CU[0m
[32m  ✓ tx [2m4jBcRrBCNzSt..[0m[0m
[2m[onchain][0m [2m4dMW3o3zo1..[0m [36m⚡ UnitsHired[0m [2mplayer=8368TZj8.. playerName=Player #1 unitType=0 baseQuantity=106 finalQuantity=171 noviBurned=500 timeBonusBps=6132 timestamp=1770017898[0m
[2m[onchain][0m [2m4dMW3o3zo1..[0m [35mhire units[0m
[2m[onchain][0m [2m4dMW3o3zo1..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4dMW3o3zo1..[0m [33mTotal 23,228 / 200,000 CU[0m
[2m[onchain][0m [2m34UAmiNR9a..[0m [36m⚡ RallyCreated[0m [2mrally=E3hB4A3T.. team=8d9iJRnJ.. teamName=HTeam898968 leader=8368TZj8.. target=7zKa1Eby.. gatherAt=1770021499 timestamp=1770017899[0m
[2m[onchain][0m [2m34UAmiNR9a..[0m [35mcreate rally[0m
[2m[onchain][0m [2m34UAmiNR9a..[0m [33mTotal 31,804 / 200,000 CU[0m
[32m  ✓ tx [2m34UAmiNR9akK..[0m[0m
[2m[onchain][0m [2m3vBtdfdg2A..[0m [36m⚡ HeroMinted[0m [2mheroMint=2vAJPfHt.. heroName=Warrior player=8368TZj8.. playerName=Player #1 templateId=1 rarity=0 timestamp=1770017899[0m
[2m[onchain][0m [2m3vBtdfdg2A..[0m [35mmint hero[0m
[2m[onchain][0m [2m3vBtdfdg2A..[0m [35mInstruction: Create[0m
[2m[onchain][0m [2m3vBtdfdg2A..[0m [35mprograms/mpl-core/src/state/collection.rs:139:Approve[0m
[2m[onchain][0m [2m3vBtdfdg2A..[0m [35mInstruction: AddPlugin[0m
[2m[onchain][0m [2m3vBtdfdg2A..[0m [35mprograms/mpl-core/src/state/collection.rs:160:Approve[0m
[2m[onchain][0m [2m3vBtdfdg2A..[0m [33mTotal 43,368 / 200,000 CU[0m
[32m  ✓ tx [2m3vBtdfdg2AfB..[0m[0m
[2m[onchain][0m [2m5fY6GrdkcP..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m5fY6GrdkcP..[0m [35mlock hero[0m
[2m[onchain][0m [2m5fY6GrdkcP..[0m [35mInstruction: Transfer[0m
[2m[onchain][0m [2m5fY6GrdkcP..[0m [35mprograms/mpl-core/src/state/asset.rs:293:Approve[0m
[2m[onchain][0m [2m5fY6GrdkcP..[0m [35mlock: parsing nft[0m
[2m[onchain][0m [2m5fY6GrdkcP..[0m [35mlock: parsed ok[0m
[2m[onchain][0m [2m5fY6GrdkcP..[0m [35mlock: loading template[0m
[2m[onchain][0m [2m5fY6GrdkcP..[0m [35mlock: template mismatch[0m
[2m[onchain][0m [2m5fY6GrdkcP..[0m [33mTotal 9,991 / 200,000 CU[0m
[2m[onchain][0m [2m5fY6GrdkcP..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1777[0m
[31m  ✗ tx[0m
[31m    Transaction 5fY6GrdkcPSbrPwxWfZWZMFaZEiM77b1NrKyxUSjcFVGDD99G12dbsBzGU8j635bohFaBqWmAVZ8EXtQhgyZ3P9B resulted in an error. [0m
2174 |       default:
2175 |         {
2176 |           message = `Unknown action '${(a => a)(action)}'`;
2177 |         }
2178 |     }
2179 |     super(message);
           ^
error: Transaction 5fY6GrdkcPSbrPwxWfZWZMFaZEiM77b1NrKyxUSjcFVGDD99G12dbsBzGU8j635bohFaBqWmAVZ8EXtQhgyZ3P9B resulted in an error. 
Status: ({"err":{"InstructionError":[0,{"Custom":6007}]}}). 
Catch the `SendTransactionError` and call `getLogs()` on it for full details.
  signature: "5fY6GrdkcPSbrPwxWfZWZMFaZEiM77b1NrKyxUSjcFVGDD99G12dbsBzGU8j635bohFaBqWmAVZ8EXtQhgyZ3P9B",
 transactionMessage: "Status: ({\"err\":{\"InstructionError\":[0,{\"Custom\":6007}]}})",
 transactionLogs: undefined,

      at new SendTransactionError (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2179:5)
      at <anonymous> (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2302:13)
(fail) Hero System > Hero Lock/Unlock > should lock hero for expedition [22580.95ms]
(skip) Hero System > Hero Lock/Unlock > should unlock hero after expedition
(skip) Hero System > Hero Lock/Unlock > should lock and unlock without expedition
(skip) Hero System > Hero Lock/Unlock > should reject lock on occupied slot
(skip) Hero System > Hero Assignment > should assign hero for defense
(skip) Hero System > Hero Assignment > should remove defensive assignment
(skip) Hero System > Hero Assignment > should reject assigning empty slot
(skip) Hero System > Hero Stats > should have correct base stats from template
(skip) Hero System > Hero Stats > should apply hero bonuses when locked
(skip) Hero System > Hero Stats > should have specialization bonuses
[PlayerFactory] Initializing player 1 (city 1)
[2m[onchain][0m [2m33h6NqPLXT..[0m [36m⚡ UserCreated[0m [2muser=5HE6xRps.. wallet=78AzdeTP.. timestamp=1770017901[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [36m⚡ PlayerJoinedKingdom[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. player=DTpJZyJQ.. owner=78AzdeTP.. joinedAt=1770017901[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35minit user[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35minit player[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mInstruction: MintTo[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [35mcreate research progress[0m
[2m[onchain][0m [2m33h6NqPLXT..[0m [33mTotal 4,938 / 514,297 CU[0m
[2m[onchain][0m [2m1C66LjzuA1..[0m [36m⚡ EstateCreated[0m [2mestate=CJVxU1P5.. player=DTpJZyJQ.. playerName=Player #2 timestamp=1770017901[0m
[2m[onchain][0m [2m1C66LjzuA1..[0m [36m⚡ ItemPurchased[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 itemId=9999 quantity=10 price=10000 currency=0 timestamp=1770017901[0m
[2m[onchain][0m [2m1C66LjzuA1..[0m [35mcreate estate[0m
[2m[onchain][0m [2m1C66LjzuA1..[0m [35mpurchase item[0m
[2m[onchain][0m [2m1C66LjzuA1..[0m [33mTotal 12,566 / 396,001 CU[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=0 plot=0 completesAt=1770032302 timestamp=1770017902[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [36m⚡ BuildingCompleted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=0 level=1 plot=0 timestamp=1770017902[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [35mcomplete building[0m
[2m[onchain][0m [2m5NxJG4Esmu..[0m [33mTotal 1,072 / 321,543 CU[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=9 plot=1 completesAt=1770061104 timestamp=1770017904[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [35mcomplete building[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [33mTotal 564 / 321,525 CU[0m
[2m[onchain][0m [2m4CEj3jkEyC..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[buildAndCompleteBuilding] Building 9 needs split build...
[2m[onchain][0m [2mppEnS6Lc8Z..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=9 plot=1 completesAt=1770061104 timestamp=1770017904[0m
[2m[onchain][0m [2mppEnS6Lc8Z..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mppEnS6Lc8Z..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mppEnS6Lc8Z..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mppEnS6Lc8Z..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mppEnS6Lc8Z..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mppEnS6Lc8Z..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mppEnS6Lc8Z..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mppEnS6Lc8Z..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mppEnS6Lc8Z..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mppEnS6Lc8Z..[0m [33mTotal 10,204 / 331,729 CU[0m
[2m[onchain][0m [2m38crWPz1AP..[0m [36m⚡ BuildingCompleted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=9 level=1 plot=1 timestamp=1770017905[0m
[2m[onchain][0m [2m38crWPz1AP..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m38crWPz1AP..[0m [35mcomplete building[0m
[2m[onchain][0m [2m38crWPz1AP..[0m [33mTotal 1,115 / 289,662 CU[0m
[2m[onchain][0m [2mWDR9qd9fBg..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2mWDR9qd9fBg..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mWDR9qd9fBg..[0m [33mTotal 360 / 399,850 CU[0m
[2m[onchain][0m [2mWDR9qd9fBg..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1a[0m
[buildAndCompleteBuilding] Building 0 already exists, continuing
[2m[onchain][0m [2mDivTMngrqG..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=12 plot=2 completesAt=1770061109 timestamp=1770017909[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [35mcomplete building[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [33mTotal 591 / 321,488 CU[0m
[2m[onchain][0m [2mDivTMngrqG..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[buildAndCompleteBuilding] Building 12 needs split build...
[2m[onchain][0m [2m4hJ51qDYaZ..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=12 plot=2 completesAt=1770061109 timestamp=1770017909[0m
[2m[onchain][0m [2m4hJ51qDYaZ..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4hJ51qDYaZ..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4hJ51qDYaZ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4hJ51qDYaZ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4hJ51qDYaZ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4hJ51qDYaZ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4hJ51qDYaZ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4hJ51qDYaZ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4hJ51qDYaZ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4hJ51qDYaZ..[0m [33mTotal 10,209 / 331,697 CU[0m
[2m[onchain][0m [2m3LrhJLjRgU..[0m [36m⚡ BuildingCompleted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=12 level=1 plot=2 timestamp=1770017910[0m
[2m[onchain][0m [2m3LrhJLjRgU..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3LrhJLjRgU..[0m [35mcomplete building[0m
[2m[onchain][0m [2m3LrhJLjRgU..[0m [33mTotal 1,179 / 289,657 CU[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=1 plot=3 completesAt=1770032312 timestamp=1770017912[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [36m⚡ BuildingCompleted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=1 level=1 plot=3 timestamp=1770017912[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [35mcomplete building[0m
[2m[onchain][0m [2m5dmw1VZYPC..[0m [33mTotal 1,234 / 321,439 CU[0m
[2m[onchain][0m [2m4U974WPPAi..[0m [36m⚡ TeamCreated[0m [2mteam=D6p7C3nr.. teamName=HTeam914684 founder=DTpJZyJQ.. noviBurned=50000 timestamp=1770017914[0m
[2m[onchain][0m [2m4U974WPPAi..[0m [35mcreate team[0m
[2m[onchain][0m [2m4U974WPPAi..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4U974WPPAi..[0m [33mTotal 31,708 / 200,000 CU[0m
[32m  ✓ tx [2m4U974WPPAirF..[0m[0m
[2m[onchain][0m [2mBhtSsqXaVa..[0m [36m⚡ UnitsHired[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 unitType=0 baseQuantity=106 finalQuantity=171 noviBurned=500 timeBonusBps=6132 timestamp=1770017914[0m
[2m[onchain][0m [2mBhtSsqXaVa..[0m [35mhire units[0m
[2m[onchain][0m [2mBhtSsqXaVa..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mBhtSsqXaVa..[0m [33mTotal 23,229 / 200,000 CU[0m
[2m[onchain][0m [2m4GtzHP499y..[0m [36m⚡ RallyCreated[0m [2mrally=HRA7U8MV.. team=D6p7C3nr.. teamName=HTeam914684 leader=DTpJZyJQ.. target=6QeUezNT.. gatherAt=1770021515 timestamp=1770017915[0m
[2m[onchain][0m [2m4GtzHP499y..[0m [35mcreate rally[0m
[2m[onchain][0m [2m4GtzHP499y..[0m [33mTotal 29,001 / 200,000 CU[0m
[32m  ✓ tx [2m4GtzHP499yCN..[0m[0m
[2m[onchain][0m [2m5LJGUW1FHS..[0m [36m⚡ HeroMinted[0m [2mheroMint=GquvwsdE.. heroName=Warrior player=DTpJZyJQ.. playerName=Player #2 templateId=1 rarity=0 timestamp=1770017915[0m
[2m[onchain][0m [2m5LJGUW1FHS..[0m [35mmint hero[0m
[2m[onchain][0m [2m5LJGUW1FHS..[0m [35mInstruction: Create[0m
[2m[onchain][0m [2m5LJGUW1FHS..[0m [35mprograms/mpl-core/src/state/collection.rs:139:Approve[0m
[2m[onchain][0m [2m5LJGUW1FHS..[0m [35mInstruction: AddPlugin[0m
[2m[onchain][0m [2m5LJGUW1FHS..[0m [35mprograms/mpl-core/src/state/collection.rs:160:Approve[0m
[2m[onchain][0m [2m5LJGUW1FHS..[0m [33mTotal 43,378 / 200,000 CU[0m
[32m  ✓ tx [2m5LJGUW1FHSSh..[0m[0m
[2m[onchain][0m [2mr1m7jWAUM4..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2mr1m7jWAUM4..[0m [35mlock hero[0m
[2m[onchain][0m [2mr1m7jWAUM4..[0m [35mInstruction: Transfer[0m
[2m[onchain][0m [2mr1m7jWAUM4..[0m [35mprograms/mpl-core/src/state/asset.rs:293:Approve[0m
[2m[onchain][0m [2mr1m7jWAUM4..[0m [35mlock: parsing nft[0m
[2m[onchain][0m [2mr1m7jWAUM4..[0m [35mlock: parsed ok[0m
[2m[onchain][0m [2mr1m7jWAUM4..[0m [35mlock: loading template[0m
[2m[onchain][0m [2mr1m7jWAUM4..[0m [35mlock: template mismatch[0m
[2m[onchain][0m [2mr1m7jWAUM4..[0m [33mTotal 9,991 / 200,000 CU[0m
[2m[onchain][0m [2mr1m7jWAUM4..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1777[0m
[31m  ✗ tx[0m
[31m    Transaction r1m7jWAUM4asyitw56WS93BrV92tcjyqzTnm7HryeoTrFiuJ7YVzbTi3Bzi2R1awiWzg1VZvs6Zn1QHY7vMeRLm resulted in an error. [0m
2174 |       default:
2175 |         {
2176 |           message = `Unknown action '${(a => a)(action)}'`;
2177 |         }
2178 |     }
2179 |     super(message);
           ^
error: Transaction r1m7jWAUM4asyitw56WS93BrV92tcjyqzTnm7HryeoTrFiuJ7YVzbTi3Bzi2R1awiWzg1VZvs6Zn1QHY7vMeRLm resulted in an error. 
Status: ({"err":{"InstructionError":[0,{"Custom":6007}]}}). 
Catch the `SendTransactionError` and call `getLogs()` on it for full details.
  signature: "r1m7jWAUM4asyitw56WS93BrV92tcjyqzTnm7HryeoTrFiuJ7YVzbTi3Bzi2R1awiWzg1VZvs6Zn1QHY7vMeRLm",
 transactionMessage: "Status: ({\"err\":{\"InstructionError\":[0,{\"Custom\":6007}]}})",
 transactionLogs: undefined,

      at new SendTransactionError (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2179:5)
      at <anonymous> (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2302:13)
(fail) Hero System > Hero Equipment > should lock hero for equipment readiness [15689.57ms]
(skip) Hero System > Hero Equipment > should unlock hero after removing equipment
(skip) Hero System > Hero Equipment > should reject equipping to non-locked hero slot
(skip) Hero System > Hero Collection > should reject duplicate collection creation
(skip) Hero System > Hero Collection > should reject collection creation by non-DAO
(skip) Hero System > Hero Experience > should gain XP from locking hero
(skip) Hero System > Hero Experience > should gain XP from expeditions
(skip) Hero System > Hero Experience > should calculate XP to next level
(skip) Hero System > Hero Rarity > should mint heroes with rarity from template
(skip) Hero System > Hero Rarity > should apply rarity stat multipliers when locked
(skip) Hero System > Hero Trading > should mint hero to wallet
(skip) Hero System > Hero Trading > should reject unlock with wrong slot
(skip) Hero System > Hero Trading > should verify locked hero is owned by PDA

 0 pass
 29 skip
 2 fail
Ran 31 tests across 1 files. [42.42s]
